[package]
name = "net-trace"
description = "A network trace parser for pcap files. You can parse packets with all relevant IPv4 and TCP fields. (tshark is required to be installed on your system.)"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
